--- a/spec/fixtures/vcr_cassettes/Dashboord_Index/happy_path/when_i_go_to_my_dashboard_I_should_see_my_circle.yml
+++ b/spec/fixtures/vcr_cassettes/Dashboord_Index/happy_path/when_i_go_to_my_dashboard_I_should_see_my_circle.yml
@@ -25,16 +25,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 9f8b8365-7aec-49d1-9811-108f09471c65
+      - 342ffd82-65bb-4a2b-937a-582c8ff9c15b
       X-Runtime:
-      - '0.007763'
+      - '0.006644'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}},{"id":"3","type":"profile","attributes":{"zipcode":"80304","user_id":3,"profile_picture":"http://www.google.com","username":"slipknot"}},{"id":"4","type":"profile","attributes":{"zipcode":"80303","user_id":4,"profile_picture":"http://www.google.com","username":"photos
         by jim"}},{"id":"5","type":"profile","attributes":{"zipcode":"80544","user_id":5,"profile_picture":"http://www.google.com","username":"arteest"}}]}'
-  recorded_at: Wed, 21 Apr 2021 23:06:06 GMT
+  recorded_at: Wed, 21 Apr 2021 23:49:34 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/circle/posts
@@ -60,9 +60,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 75bf634e-e7bc-460a-a578-a416a9aa4810
+      - a23c512c-191e-4f22-9e7b-ab3b752f1e95
       X-Runtime:
-      - '0.013367'
+      - '0.006878'
       Transfer-Encoding:
       - chunked
     body:
@@ -75,7 +75,7 @@ http_interactions:
         did you see that we''re not friends on FB anymore?","link":"photoURL.com","user_id":4,"created_at":"2021-04-21T23:05:49.688Z"}},{"id":"9","type":"post","attributes":{"content":"hey
         did you see hear about that create app called ''level''?","link":"photoURL.com","user_id":4,"created_at":"2021-04-21T23:05:49.689Z"}},{"id":"10","type":"post","attributes":{"content":"hey
         i just got hired at a sick new comapny","link":null,"user_id":5,"created_at":"2021-04-21T23:05:49.691Z"}}]}'
-  recorded_at: Wed, 21 Apr 2021 23:06:06 GMT
+  recorded_at: Wed, 21 Apr 2021 23:49:34 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1/post
@@ -97,13 +97,13 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"a0933f48d53318688bc40d8947b8cc7a"
+      - W/"bad89ab1cddecd0b6c533127319596e9"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 8c108470-d8a9-4cbf-a11e-53f8e97cb4ed
+      - bde72549-a9e4-42aa-ab27-6b1b1319ce84
       X-Runtime:
-      - '0.005861'
+      - '0.006136'
       Transfer-Encoding:
       - chunked
     body:
@@ -111,8 +111,12 @@ http_interactions:
       string: '{"data":[{"id":"1","type":"post","attributes":{"content":"hey did you
         see that lil nas X video?","link":"photoURL.com","user_id":1,"created_at":"2021-04-21T23:05:49.679Z"}},{"id":"2","type":"post","attributes":{"content":"hey
         did you see that create meme?","link":"photoURL.com","user_id":1,"created_at":"2021-04-21T23:05:49.680Z"}},{"id":"3","type":"post","attributes":{"content":"hey
-        did you see that riot footage?","link":null,"user_id":1,"created_at":"2021-04-21T23:05:49.682Z"}}]}'
-  recorded_at: Wed, 21 Apr 2021 23:06:06 GMT
+        did you see that riot footage?","link":null,"user_id":1,"created_at":"2021-04-21T23:05:49.682Z"}},{"id":"11","type":"post","attributes":{"content":"this
+        is my first post","link":"www.google.com","user_id":1,"created_at":"2021-04-21T23:06:06.918Z"}},{"id":"12","type":"post","attributes":{"content":"this
+        is my first post","link":"","user_id":1,"created_at":"2021-04-21T23:06:07.377Z"}},{"id":"13","type":"post","attributes":{"content":"this
+        is my first post","link":"www.google.com","user_id":1,"created_at":"2021-04-21T23:42:16.536Z"}},{"id":"14","type":"post","attributes":{"content":"this
+        is my first post","link":"","user_id":1,"created_at":"2021-04-21T23:42:16.969Z"}}]}'
+  recorded_at: Wed, 21 Apr 2021 23:49:34 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1
@@ -138,16 +142,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 3bdc8e9c-1569-4cc0-a3d3-11c383dac980
+      - 6e35513e-e544-4d3b-aa1c-d002e462696c
       X-Runtime:
-      - '0.003352'
+      - '0.003648'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"1","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Wed, 21 Apr 2021 23:06:06 GMT
+  recorded_at: Wed, 21 Apr 2021 23:49:34 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/1
@@ -173,16 +177,16 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f427a242-8a07-4f0b-8d5c-b0ed1bfe5d94
+      - 9868b358-aa78-430b-ae7c-9cc8571d699b
       X-Runtime:
-      - '0.003876'
+      - '0.003779'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"1","type":"profile","attributes":{"zipcode":"80301","user_id":1,"profile_picture":"http://www.google.com","username":"the
         painter man"}}}'
-  recorded_at: Wed, 21 Apr 2021 23:06:06 GMT
+  recorded_at: Wed, 21 Apr 2021 23:49:34 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profile/1/tags
@@ -208,13 +212,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5f7dde1d-b777-474d-9398-a044794c8d9c
+      - fd08336c-4fcd-4401-9824-dfae84ff6389
       X-Runtime:
-      - '0.008184'
+      - '0.005259'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"tag","attributes":{"name":"Painter"}},{"id":"3","type":"tag","attributes":{"name":"Sculpter"}}]}'
-  recorded_at: Wed, 21 Apr 2021 23:06:06 GMT
+  recorded_at: Wed, 21 Apr 2021 23:49:34 GMT
 recorded_with: VCR 6.0.0
